--- a/Pay365/Pay365Wallet/App_GlobalResources/Account_info.en.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Account_info.en.resx
@@ -265,7 +265,7 @@
     <value>Verify</value>
   </data>
   <data name="lbl_account" xml:space="preserve">
-    <value>account</value>
+    <value>Account</value>
   </data>
   <data name="lbl_certificate" xml:space="preserve">
     <value>Certificate</value>
