--- a/Pay365/Pay365Wallet/App_GlobalResources/Common.en.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Common.en.resx
@@ -253,7 +253,7 @@
     <value>Shopping</value>
   </data>
   <data name="guide_2" xml:space="preserve">
-    <value>What can i help you ?</value>
+    <value>How can i help you ?</value>
   </data>
   <data name="guide_3" xml:space="preserve">
     <value>Enter what you need to help.</value>
