--- a/Pay365/Pay365Wallet/locales/vi/transaction.payment.json
+++ b/Pay365/Pay365Wallet/locales/vi/transaction.payment.json
@@ -28,8 +28,8 @@
     "buyCardTelco": "Mua mã thẻ điện thoại",
     "buyCardGame": "Mua mã thẻ Game",
     "card": "Thẻ",
-    "noteSecureSMS": "Mã xác thực OTP đã được gửi đến số <span class='secondary'>{0}</span> (Miễn phí 5 SMS/24h).</br>Không nhận được mã vui lòng click <span class='secondary'>Nhận lại OTP</span> hoặc soạn tin theo cú pháp <span class='secondary'>PAY365 OTP</span> gửi <span class='secondary'>8095</span> (1.000 VNĐ/ SMS)",
-    "noteSecureEmail": "Mã xác thực OTP đã được gửi đến email <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận thanh toán.</br>Không nhận được mã vui lòng click <span class='secondary'>Nhận lại OTP</span> (Miễn phí) hoặc soạn tin theo cú pháp <span class='secondary'>PAY365 OTP</span> gửi <span class='secondary'>8095</span> (1.000 VNĐ/ SMS)",
+    "noteSecureSMS": "Mã xác thực OTP đã được gửi đến số <span class='secondary'>{0}</span> (Miễn phí 5 SMS/24h).</br>Không nhận được mã vui lòng click <span class='secondary'>Nhận lại OTP</span> hoặc soạn tin theo cú pháp <span class='secondary'>P365 OTP</span> gửi <span class='secondary'>8100</span> (1.000 VNĐ/ SMS)",
+    "noteSecureEmail": "Mã xác thực OTP đã được gửi đến email <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận thanh toán.</br>Không nhận được mã vui lòng click <span class='secondary'>Nhận lại OTP</span> (Miễn phí) hoặc soạn tin theo cú pháp <span class='secondary'>P365 OTP</span> gửi <span class='secondary'>8100</span> (1.000 VNĐ/ SMS)",
     "noteSecureApp": "Vui lòng mở app Pay365 để lấy mã giao dịch",
     "noteSecureVoice": "Vui lòng nhận cuộc gọi từ tổng đài 1900-6505 để nhận mã xác thực OTP",
     "noteSecureNot": "Giao dịch của bạn có giá trị giao dịch dưới hạn mức được cài đặt, vui lòng xác nhận để thực hiện giao dịch",
