--- a/Pay365/Pay365Wallet/App_GlobalResources/Account.en.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Account.en.resx
@@ -235,13 +235,13 @@
     <value>An OTP has been sent to phone number: </value>
   </data>
   <data name="StringMsg2" xml:space="preserve">
-    <value>Did not receive OTP? Compose a message &lt;span class="secondary"&gt;PAY365 MK&lt;/span&gt; syntax sent to &lt;span class="secondary"&gt;8095&lt;/span &gt; (1.000VNĐ/SMS)</value>
+    <value>Did not receive OTP? Compose a message &lt;span class="secondary"&gt;P365 MK&lt;/span&gt; syntax sent to &lt;span class="secondary"&gt;8100&lt;/span &gt; (1.000VNĐ/SMS)</value>
   </data>
   <data name="StringMsg3" xml:space="preserve">
     <value>An verify code has been sent to the email</value>
   </data>
   <data name="StringMsg4" xml:space="preserve">
-    <value>Please click the resend button to receive the verify code. If you do not receive the code, compose the message &lt;strong class="danger"&gt;PAY365 MK&lt;/strong&gt; send &lt;strong class="danger"&gt;8095&lt;/strong&gt; (500đ/SMS)</value>
+    <value>Please click the resend button to receive the verify code. If you do not receive the code, compose the message &lt;strong class="danger"&gt;P365 MK&lt;/strong&gt; send &lt;strong class="danger"&gt;8100&lt;/strong&gt; (500đ/SMS)</value>
   </data>
   <data name="TextSMS" xml:space="preserve">
     <value>Text</value>
@@ -271,7 +271,7 @@
     <value>Phone number to receive OTP</value>
   </data>
   <data name="NoteSecureOTPSMS" xml:space="preserve">
-    <value>Did not receive the code, please compose the message &lt;strong class="danger"&gt;PAY365 BM&lt;/strong&gt; send &lt;strong class="danger"&gt;8095&lt;/strong&gt; &lt;span class="warning"&gt;(1.000VNĐ/SMS)&lt;/span&gt;</value>
+    <value>Did not receive the code, please compose the message &lt;strong class="danger"&gt;P365 BM&lt;/strong&gt; send &lt;strong class="danger"&gt;8100&lt;/strong&gt; &lt;span class="warning"&gt;(1.000VNĐ/SMS)&lt;/span&gt;</value>
   </data>
   <data name="NoteLimitSecure" xml:space="preserve">
     <value>The secure limit is the minimum value for a transaction of which you need to enter OTP to confirm your transaction</value>
