--- a/Pay365/Pay365Wallet/locales/en/transaction.payment.json
+++ b/Pay365/Pay365Wallet/locales/en/transaction.payment.json
@@ -28,8 +28,8 @@
     "buyCardTelco": "Buy card mobile",
     "buyCardGame": "Buy card game",
     "card": "Card",
-    "noteSecureSMS": "The OTP verify code has been sent to the number <span class='secondary'>{0}</span> (Free 5 SMS/24h). If you do not receive the code, please click <span class='secondary'>Resend OTP</span> or compose <span class='secondary'>PAY365 OTP</span> send <span class='secondary'>8095</span> (1.000 VNĐ/ SMS)",
-    "noteSecureEmail": "The OTP verify code has been sent to the email <span class='secondary'>{0}</span>, please enter the code to confirm the transaction.If you do not receive the code, please click <span class='secondary'>Resend OTP</span> (Free) or compose <span class='secondary'>PAY365 OTP</span> send <span class='secondary'>8095</span> (1.000 VNĐ/ SMS)",
+    "noteSecureSMS": "The OTP verify code has been sent to the number <span class='secondary'>{0}</span> (Free 5 SMS/24h). If you do not receive the code, please click <span class='secondary'>Resend OTP</span> or compose <span class='secondary'>P365 OTP</span> send <span class='secondary'>8100</span> (1.000 VNĐ/ SMS)",
+    "noteSecureEmail": "The OTP verify code has been sent to the email <span class='secondary'>{0}</span>, please enter the code to confirm the transaction.If you do not receive the code, please click <span class='secondary'>Resend OTP</span> (Free) or compose <span class='secondary'>P365 OTP</span> send <span class='secondary'>8100</span> (1.000 VNĐ/ SMS)",
     "noteSecureApp": "Please open the Pay365 app to get the verify code",
     "noteSecureVoice": "Please pick up the call from the 1900-6505 switchboard to receive the OTP verification code",
     "noteSecureNot": "Your transaction has a transaction value below the set limit, please confirm to make the transaction",
