--- a/Pay365/Pay365Wallet/App_GlobalResources/Common.en.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Common.en.resx
@@ -412,6 +412,6 @@
     <value>Link card</value>
   </data>
   <data name="lbl_linkCard_Title" xml:space="preserve">
-    <value>Manager link card</value>
+    <value>Linked card</value>
   </data>
 </root>
