--- a/Pay365/Pay365Wallet/locales/vi/common.errorcode.json
+++ b/Pay365/Pay365Wallet/locales/vi/common.errorcode.json
@@ -126,6 +126,7 @@
     "C_EMAIL_NOT_VERIFY": "Email chưa được xác thực. Vui lòng xác thực email",
     "MAX_AMOUNT_OUTOF_RANGER": "Giao dịch vượt quá hạn mức {0}",
     "ACCOUNT_UNVERIFY": "Tài khoản chưa chứng thực không thể sử dụng chức năng này",
+    "ACCOUNT_UNLINKED": "Tài khoản chưa gắn kết", 
     "BANKACCOUNT_NOTEXISTED": "Số thẻ/ Số tài khoản ngân hàng không tồn tại",
     "ACCOUNT_VERIFIED": "Tài khoản đã chứng thực",
     "TRANSACTION_PROCESSING": "Giao dịch đang được sử lý",
