--- a/Pay365/Pay365Wallet/locales/en/common.errorcode.json
+++ b/Pay365/Pay365Wallet/locales/en/common.errorcode.json
@@ -94,7 +94,7 @@
     "INVALID_PASSWORD": "Password is invalid",
     "SYSTEM_ERROR": "System fail. Please try again later",
     "ACCOUNT_EXISTED": "Account is existed",
-    "ACCOUNT_BLOCKED": "Account is locking. Please call 1900-6505 for assistance",
+    "ACCOUNT_BLOCKED": "Account is locking. Please call 093-4626-505 for assistance",
     "ACCOUNT_UNACTIVE": "Account is not active",
     "ACCOUNT_NOTEXISTED": "Account is not exists",
     "NOT_PERMISSION": "You don't have permission to access. Please come back later",
