--- a/Pay365/Pay365Wallet/locales/vi/common.errorcode.json
+++ b/Pay365/Pay365Wallet/locales/vi/common.errorcode.json
@@ -94,7 +94,7 @@
     "INVALID_PASSWORD": "Mật khẩu không hợp lệ",
     "SYSTEM_ERROR": "Lỗi hệ thống. Vui lòng thử lại sau",
     "ACCOUNT_EXISTED": "Số tài khoản đã tồn tại",
-    "ACCOUNT_BLOCKED": "Số tài khoản đang bị khóa. Vui lòng gọi số 1900-6505 để được hỗ trợ",
+    "ACCOUNT_BLOCKED": "Số tài khoản đang bị khóa. Vui lòng gọi số 093-4626-505 để được hỗ trợ",
     "ACCOUNT_UNACTIVE": "Số tài khoản không hoạt động",
     "ACCOUNT_NOTEXISTED": "Số tài khoản không tồn tại",
     "NOT_PERMISSION": "Bạn không có quyền truy cập. Vui lòng quay lại sau",
