--- a/Pay365/Pay365Wallet/App_GlobalResources/Payment.en.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Payment.en.resx
@@ -223,7 +223,7 @@
     <value>Total price</value>
   </data>
   <data name="typeview1" xml:space="preserve">
-    <value>Phone recharge - Pay365</value>
+    <value>Phone recharge</value>
   </data>
   <data name="typeview2" xml:space="preserve">
     <value>Topup game </value>
