--- a/Pay365/Pay365Wallet/locales/vi/profile.account.json
+++ b/Pay365/Pay365Wallet/locales/vi/profile.account.json
@@ -28,32 +28,36 @@
     "done": "Cập nhật thông tin tài khoản thành công",
     "Notification": "Thông báo"
   },
-  "accountSecure": {
-    "register": "Đăng ký",
-    "changeLimit": "Đổi hạn mức",
-    "notRegisterOTP": "Tài khoản của bạn chưa đăng ký bảo mật OTP",
-    "minAmountEmpty": "Vui lòng nhập hạn mức bảo mật",
-    "minAmountInvalid": "Hạn mức nhập vào không hợp lệ",
-    "registerSuccess": "Đăng ký bảo mật thành công",
-    "registerOTPEmailSuccess": "Bạn đã đăng ký bảo mật thanh toán thành công với email <span class='secondary'>{0}</span>.",
-    "updateLimitSecureSuccess": "Thay đổi hạn mức bảo mật thành công",
-    "success": "Thành công",
-    "fail": "Thất bại",
-    "btnClose": "Đóng",
-    "btnConfirm": "Xác nhận",
-    "inputConfirmCode": "Vui lòng nhập mã xác thực",
-    "confirmCodeInvalid": "Mã xác thực không hợp lệ",
-    "registerSecure": "Đăng ký bảo mật",
-    "resendOTP_Success": "Gửi lại mã bảo mật thành công !",
-    "noteUpdateLimitSMS": "Hệ thống vừa gửi mã xác thực đến số <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận đổi hạn mức thanh toán.",
-    "noteUpdateLimitEmail": "Hệ thống vừa gửi mã xác thực vào địa chỉ email <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận đổi hạn mức thanh toán.",
-    "noteRegisterSMS": "Hệ thống vừa gửi mã xác thực đến số <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận đăng ký bảo mật.",
-    "noteRegisterEmail": "Hệ thống vừa gửi mã xác thực vào địa chỉ email <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận đăng ký bảo mật.",
-    "noteSecureApp": "Vui lòng mở app Pay365 để lấy mã giao dịch",
-    "noteSecureVoice": "Vui lòng nhận cuộc gọi từ tổng đài 093-4626-505 để nhận mã xác thực OTP",
-    "resendChangeEmail": "Hệ thống đã gửi lại mã xác thực vào địa chỉ email <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận đổi hạn mức thanh toán.",
-    "resendRegisterEmail": "Hệ thống đã gửi lại mã xác thực vào địa chỉ email <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận đăng ký bảo mật.",
-    "titleResendOTP": "Đã gửi lại mã xác thực",
-    "notRegisterSecure": "Chưa đăng ký bảo mật" 
-  }
+    "accountSecure": {
+        "register": "Đăng ký",
+        "changeLimit": "Đổi hạn mức",
+        "notRegisterOTP": "Tài khoản của bạn chưa đăng ký bảo mật OTP",
+        "minAmountEmpty": "Vui lòng nhập hạn mức bảo mật",
+        "minAmountInvalid": "Hạn mức nhập vào không hợp lệ",
+        "registerSuccess": "Đăng ký bảo mật thành công",
+        "registerOTPEmailSuccess": "Bạn đã đăng ký bảo mật thanh toán thành công với email <span class='secondary'>{0}</span>.",
+        "updateLimitSecureSuccess": "Thay đổi hạn mức bảo mật thành công",
+        "success": "Thành công",
+        "fail": "Thất bại",
+        "btnClose": "Đóng",
+        "btnConfirm": "Xác nhận",
+        "inputConfirmCode": "Vui lòng nhập mã xác thực",
+        "confirmCodeInvalid": "Mã xác thực không hợp lệ",
+        "registerSecure": "Đăng ký bảo mật",
+        "resendOTP_Success": "Gửi lại mã bảo mật thành công !",
+        "noteUpdateLimitSMS": "Hệ thống vừa gửi mã xác thực đến số <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận đổi hạn mức thanh toán.",
+        "noteUpdateLimitEmail": "Hệ thống vừa gửi mã xác thực vào địa chỉ email <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận đổi hạn mức thanh toán.",
+        "noteRegisterSMS": "Hệ thống vừa gửi mã xác thực đến số <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận đăng ký bảo mật.",
+        "noteRegisterEmail": "Hệ thống vừa gửi mã xác thực vào địa chỉ email <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận đăng ký bảo mật.",
+        "noteSecureApp": "Vui lòng mở app Pay365 để lấy mã giao dịch",
+        "noteSecureVoice": "Vui lòng nhận cuộc gọi từ tổng đài 093-4626-505 để nhận mã xác thực OTP",
+        "resendChangeEmail": "Hệ thống đã gửi lại mã xác thực vào địa chỉ email <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận đổi hạn mức thanh toán.",
+        "resendRegisterEmail": "Hệ thống đã gửi lại mã xác thực vào địa chỉ email <span class='secondary'>{0}</span>, vui lòng nhập mã để xác nhận đăng ký bảo mật.",
+        "titleResendOTP": "Đã gửi lại mã xác thực",
+        "notRegisterSecure": "Chưa đăng ký bảo mật"
+    },
+    "linkcard": {
+        "emptyCardNumber": "Vui lòng nhập số thẻ",
+        "emptyAccountHolder":  "Vui lòng nhập tên chủ thẻ" 
+    } 
 }
