--- a/Pay365/Pay365Wallet/locales/vi/transaction.topupmoney.json
+++ b/Pay365/Pay365Wallet/locales/vi/transaction.topupmoney.json
@@ -3,7 +3,8 @@
     "system_busy": "Hệ thống đang bận, vui lòng thử lại sau",
     "account_empty": "Vui lòng nhập tài khoản nạp tiền",
     "amount_empty": "Vui lòng nhập số tiền nạp",
-    "bellow_min_amount": "Số tiền nạp tối thiểu là 10.000đ",
+    "bellow_min_amount": "Số tiền nạp tối thiểu là 10.000 VNĐ",
+    "upper_max_amount": "Số tiền nạp tối đa là 5.000.000 VNĐ",
     "bankcode_empty": "Không lấy được thông tin ngân hàng, vui lòng thử lại",
     "captcha_empty": "Vui lòng nhập mã kiểm tra",
     "captcha_token_empty": "Không lấy được thông tin mã xác thực",
