--- a/Pay365/Pay365Wallet/App_GlobalResources/Transfer.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Transfer.resx
@@ -163,6 +163,6 @@
     <value>Vui lòng nhập mã xác thực</value>
   </data>
   <data name="ReceiveAcc" xml:space="preserve">
-    <value>Tài khoản nhận</value>
+    <value>TK nhận</value>
   </data>
 </root>
