--- a/Pay365/Pay365Wallet/App_GlobalResources/Home.en.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Home.en.resx
@@ -220,7 +220,7 @@
     <value>Pay365 Joint Stock Company</value>
   </data>
   <data name="String7" xml:space="preserve">
-    <value>No. 1 Dao Duy Anh, Dong Da, Hanoi</value>
+    <value>No. 243A De La Thanh. Ha Noi</value>
   </data>
   <data name="String8" xml:space="preserve">
     <value>Enter email for promotion</value>
