--- a/Pay365/Pay365Wallet/App_GlobalResources/Home.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Home.resx
@@ -223,7 +223,7 @@
     <value>Công ty cổ phần thanh toán Pay365</value>
   </data>
   <data name="String7" xml:space="preserve">
-    <value>Số 1 Đào Duy Anh, Đống Đa, Hà Nội</value>
+    <value>243A Đê La Thành. Hà Nội</value>
   </data>
   <data name="String8" xml:space="preserve">
     <value>Đăng ký nhận tin khuyến mại</value>
