thử lên xem nào

--- a/Pay365/Pay365Wallet/App_GlobalResources/Home.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Home.resx
@@ -220,7 +220,7 @@
     <value>Tìm hiểu thêm</value>
   </data>
   <data name="String6" xml:space="preserve">
-    <value>Công ty cổ phần thanh toán Pay365</value>
+    <value>CÔNG TY TNHH ĐẦU TƯ PHÁT TRIỂN AN NINH CÔNG NGHỆ CAO</value>
   </data>
   <data name="String7" xml:space="preserve">
     <value>243A Đê La Thành. Hà Nội</value>
