--- a/Pay365/Pay365Wallet/App_GlobalResources/Home.en.resx
+++ b/Pay365/Pay365Wallet/App_GlobalResources/Home.en.resx
@@ -217,7 +217,7 @@
     <value>Learn more</value>
   </data>
   <data name="String6" xml:space="preserve">
-    <value>Pay365 Joint Stock Company</value>
+    <value>AN CNC Co., LTD</value>
   </data>
   <data name="String7" xml:space="preserve">
     <value>No. 243A De La Thanh. Ha Noi</value>
